--- a/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNn/5xtdGbz9ThwlmLOfmj9",
+      "authorship_tag": "ABX9TyNj0JwwaXFumYq1MjZ1HaW2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2940,7 +2940,11 @@
         "# Count outliers per column\n",
         "outlier_counts = pd.DataFrame(outlier_mask, columns=numeric_cols.columns).sum()\n",
         "print(\"Number of Z-score outliers per numeric column:\")\n",
-        "print(outlier_counts[outlier_counts > 0].sort_values(ascending=False))"
+        "print(outlier_counts[outlier_counts > 0].sort_values(ascending=False))\n",
+        "\n",
+        "# Outlier analysis: columns like HOST, TERMREASON, and MDEATHS have many\n",
+        "# extreme values (Z > 3), which may need inspection or handling as they\n",
+        "# could skew downstream analyses."
       ],
       "metadata": {
         "colab": {
