--- a/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNj0JwwaXFumYq1MjZ1HaW2",
+      "authorship_tag": "ABX9TyNIImDrTSS7nhFSTmNGEXPj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,20 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/k10sj02/tidy-pydy-tuesday/blob/main/2025_01_21_himalayan_expeditions.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Himalayan Expeditions TidyTuesday (2025-01-21)\n",
+        "\n",
+        "This notebook explores the **Himalayan Expeditions dataset** from TidyTuesday (2025-01-21).  \n",
+        "The dataset includes expedition and peak-level data, including peak heights, climbing status, expedition details, and outcomes.\n",
+        "\n",
+        "**Source:** [TidyTuesday 2025-01-21 Readme](https://github.com/rfordatascience/tidytuesday/blob/main/data/2025/2025-01-21/readme.md)"
+      ],
+      "metadata": {
+        "id": "fbmhKqzOrwej"
+      }
     },
     {
       "cell_type": "markdown",
