--- a/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNIImDrTSS7nhFSTmNGEXPj",
+      "authorship_tag": "ABX9TyMbSxeGrN9fPfVM8+HeqLw+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3010,7 +3010,9 @@
         "# Count outliers per column\n",
         "outlier_counts = pd.DataFrame(outlier_mask, columns=numeric_cols.columns).sum()\n",
         "print(\"Number of Z-score outliers per numeric column:\")\n",
-        "print(outlier_counts[outlier_counts > 0].sort_values(ascending=False))"
+        "print(outlier_counts[outlier_counts > 0].sort_values(ascending=False))\n",
+        "\n",
+        "# Identified extreme peak heights using Z-scores (>3 SD from mean); 9 peaks are outliers in both meters and feet"
       ],
       "metadata": {
         "colab": {
