--- a/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMbSxeGrN9fPfVM8+HeqLw+",
+      "authorship_tag": "ABX9TyMzi+ujTrv9kxb31WZfbF5a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2955,6 +2955,13 @@
         "outlier_counts = pd.DataFrame(outlier_mask, columns=numeric_cols.columns).sum()\n",
         "print(\"Number of Z-score outliers per numeric column:\")\n",
         "print(outlier_counts[outlier_counts > 0].sort_values(ascending=False))\n",
+        "\n",
+        "# STATS NOTE: Standard deviation measures how spread out the data is from the\n",
+        "# mean, giving a “typical distance” of values from the average.\n",
+        "# Z-score tells us how many standard deviations a value is from the mean.\n",
+        "# Here, high |z| values indicate peaks whose heights are unusually far from\n",
+        "# the average, helping us detect outliers.\n",
+        "\n",
         "\n",
         "# Outlier analysis: columns like HOST, TERMREASON, and MDEATHS have many\n",
         "# extreme values (Z > 3), which may need inspection or handling as they\n",
