--- a/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMzi+ujTrv9kxb31WZfbF5a",
+      "authorship_tag": "ABX9TyN1YSmcmN71BMrtjdHZ60Wx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2962,7 +2962,6 @@
         "# Here, high |z| values indicate peaks whose heights are unusually far from\n",
         "# the average, helping us detect outliers.\n",
         "\n",
-        "\n",
         "# Outlier analysis: columns like HOST, TERMREASON, and MDEATHS have many\n",
         "# extreme values (Z > 3), which may need inspection or handling as they\n",
         "# could skew downstream analyses."
@@ -3045,7 +3044,12 @@
     {
       "cell_type": "code",
       "source": [
-        "peaks_tidy.describe()"
+        "peaks_tidy.describe()\n",
+        "\n",
+        "# - HEIGHTM (meters) ranges from 5407 to 8849, with most peaks clustered around 6200-6900m.\n",
+        "# - The standard deviation (~569m) shows moderate spread; a few very high peaks (like 8849m) are likely outliers.\n",
+        "# - PHOST and REGION are mostly low integers; PSTATUS is mostly 1-2, suggesting most peaks have similar climbing status.\n",
+        "# - PSEASON has a min of 0 and max of 4, indicating some missing or special cases for climbing season."
       ],
       "metadata": {
         "colab": {
@@ -3418,7 +3422,19 @@
     {
       "cell_type": "code",
       "source": [
-        "exped_tidy.describe()"
+        "exped_tidy.describe()\n",
+        "\n",
+        "# SEASON: 1–4, mean ~2.1 → most expeditions in seasons 1–3\n",
+        "# HOST: 1–3, mean ~1.04 → majority of expeditions hosted by one primary country\n",
+        "# SMTDAYS / TOTDAYS: median 0, mean 7–8 → many expeditions with missing or zero duration data\n",
+        "# TERMREASON: 0–14, mean ~2.2 → some expeditions terminated for unusual reasons (high max)\n",
+        "# HIGHPOINT: 0–8849m, mean ~6902 → most expeditions summit around 6700–7126m; some outliers reaching 8849m\n",
+        "# CAMPS: 0–13, mean ~2.5 → most expeditions use 2–4 high camps, occasional outlier with many camps\n",
+        "# ROPE: 0–5200, mean ~18 → extreme outlier; most expeditions use little to no fixed rope\n",
+        "# TOTMEMBERS / SMTMEMBERS: median 6 & 2 → typical expedition has small team; some very large groups (max 37 & 31)\n",
+        "# MDEATHS / HDEATHS: mostly 0, max 5 & 3 → fatalities are rare but present\n",
+        "# TOTHIRED / SMTHIRED: median 1–2 → some expeditions rely heavily on hired personnel (max 58 & 43)\n",
+        "# CHKSUM: ~2.2M, likely an internal ID / consistency check, nothing analytically surprising"
       ],
       "metadata": {
         "colab": {
@@ -3426,9 +3442,9 @@
           "height": 320
         },
         "id": "VPMoT205bpQy",
-        "outputId": "429f6a2f-ae08-4e77-fd54-b2cdf5aa2990"
+        "outputId": "bb1adf4c-ba13-4b1e-afb7-221a777ad180"
       },
-      "execution_count": 27,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3466,7 +3482,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-623c5e69-bf70-40cc-b037-09be9b096a15\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-7dcd1c6d-d3b6-419e-a1f9-971c35ba9cef\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -3653,7 +3669,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-623c5e69-bf70-40cc-b037-09be9b096a15')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7dcd1c6d-d3b6-419e-a1f9-971c35ba9cef')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -3705,12 +3721,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-623c5e69-bf70-40cc-b037-09be9b096a15 button.colab-df-convert');\n",
+              "        document.querySelector('#df-7dcd1c6d-d3b6-419e-a1f9-971c35ba9cef button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-623c5e69-bf70-40cc-b037-09be9b096a15');\n",
+              "        const element = document.querySelector('#df-7dcd1c6d-d3b6-419e-a1f9-971c35ba9cef');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -3730,8 +3746,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-c011c7ff-08a9-4d08-80c9-b86723876adc\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c011c7ff-08a9-4d08-80c9-b86723876adc')\"\n",
+              "    <div id=\"df-6c7b4816-25fc-4958-a440-b5898d1d9ade\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6c7b4816-25fc-4958-a440-b5898d1d9ade')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -3850,7 +3866,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-c011c7ff-08a9-4d08-80c9-b86723876adc button');\n",
+              "            document.querySelector('#df-6c7b4816-25fc-4958-a440-b5898d1d9ade button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -3862,11 +3878,11 @@
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
-              "summary": "{\n  \"name\": \"exped_tidy\",\n  \"rows\": 8,\n  \"fields\": [\n    {\n      \"column\": \"SEASON\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 363.3964621602309,\n        \"min\": 1.0,\n        \"max\": 1030.0,\n        \"num_unique_values\": 6,\n        \"samples\": [\n          1030.0,\n          2.123300970873786,\n          4.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"HOST\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 363.745069793284,\n        \"min\": 0.19634877485283037,\n        \"max\": 1030.0,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          1.0359223300970875,\n          3.0,\n          0.19634877485283037\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"SMTDAYS\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 359.8075491225931,\n        \"min\": 0.0,\n        \"max\": 1030.0,\n        \"num_unique_values\": 6,\n        \"samples\": [\n          1030.0,\n          7.398058252427185,\n          70.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"TOTDAYS\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 359.35095806092,\n        \"min\": 0.0,\n        \"max\": 1030.0,\n        \"num_unique_values\": 6,\n        \"samples\": [\n          1030.0,\n          8.215533980582524,\n          76.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"TERMREASON\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 363.032167688745,\n        \"min\": 0.0,\n        \"max\": 1030.0,\n        \"num_unique_values\": 7,\n        \"samples\": [\n          1030.0,\n          2.211650485436893,\n          2.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"HIGHPOINT\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 3500.617100321075,\n        \"min\": 0.0,\n        \"max\": 8849.0,\n        \"num_unique_values\": 8,\n        \"samples\": [\n          6902.26213592233,\n          7126.0,\n          1030.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"CAMPS\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 362.86881017501486,\n        \"min\": 0.0,\n        \"max\": 1030.0,\n        \"num_unique_values\": 8,\n        \"samples\": [\n          2.4854368932038833,\n          3.0,\n          1030.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"ROPE\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 1810.2976408393977,\n        \"min\": 0.0,\n        \"max\": 5200.0,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          17.702912621359225,\n          5200.0,\n          203.60817448822937\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"TOTMEMBERS\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 360.65881757622145,\n        \"min\": 0.0,\n        \"max\": 1030.0,\n        \"num_unique_values\": 8,\n        \"samples\": [\n          8.233980582524271,\n          6.0,\n          1030.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"SMTMEMBERS\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 361.8975822044236,\n        \"min\": 0.0,\n        \"max\": 1030.0,\n        \"num_unique_values\": 7,\n        \"samples\": [\n          1030.0,\n          3.8970873786407765,\n          6.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"MDEATHS\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 363.89476889151877,\n        \"min\": 0.0,\n        \"max\": 1030.0,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          0.04174757281553398,\n          5.0,\n          0.29111369939533516\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"TOTHIRED\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 360.0936047953161,\n        \"min\": 0.0,\n        \"max\": 1030.0,\n        \"num_unique_values\": 8,\n        \"samples\": [\n          7.415533980582524,\n          5.0,\n          1030.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"SMTHIRED\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 361.3695187180451,\n        \"min\": 0.0,\n        \"max\": 1030.0,\n        \"num_unique_values\": 7,\n        \"samples\": [\n          1030.0,\n          4.021359223300971,\n          6.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"HDEATHS\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 364.00109533043417,\n        \"min\": 0.0,\n        \"max\": 1030.0,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          0.017475728155339806,\n          3.0,\n          0.15799225262157368\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"CHKSUM\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 1146146.583820683,\n        \"min\": 1030.0,\n        \"max\": 2466848.0,\n        \"num_unique_values\": 8,\n        \"samples\": [\n          2209021.83592233,\n          2464497.0,\n          1030.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"# CHKSUM: ~2\",\n  \"rows\": 8,\n  \"fields\": [\n    {\n      \"column\": \"SEASON\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 363.3964621602309,\n        \"min\": 1.0,\n        \"max\": 1030.0,\n        \"num_unique_values\": 6,\n        \"samples\": [\n          1030.0,\n          2.123300970873786,\n          4.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"HOST\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 363.745069793284,\n        \"min\": 0.19634877485283037,\n        \"max\": 1030.0,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          1.0359223300970875,\n          3.0,\n          0.19634877485283037\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"SMTDAYS\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 359.8075491225931,\n        \"min\": 0.0,\n        \"max\": 1030.0,\n        \"num_unique_values\": 6,\n        \"samples\": [\n          1030.0,\n          7.398058252427185,\n          70.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"TOTDAYS\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 359.35095806092,\n        \"min\": 0.0,\n        \"max\": 1030.0,\n        \"num_unique_values\": 6,\n        \"samples\": [\n          1030.0,\n          8.215533980582524,\n          76.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"TERMREASON\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 363.032167688745,\n        \"min\": 0.0,\n        \"max\": 1030.0,\n        \"num_unique_values\": 7,\n        \"samples\": [\n          1030.0,\n          2.211650485436893,\n          2.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"HIGHPOINT\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 3500.617100321075,\n        \"min\": 0.0,\n        \"max\": 8849.0,\n        \"num_unique_values\": 8,\n        \"samples\": [\n          6902.26213592233,\n          7126.0,\n          1030.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"CAMPS\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 362.86881017501486,\n        \"min\": 0.0,\n        \"max\": 1030.0,\n        \"num_unique_values\": 8,\n        \"samples\": [\n          2.4854368932038833,\n          3.0,\n          1030.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"ROPE\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 1810.2976408393977,\n        \"min\": 0.0,\n        \"max\": 5200.0,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          17.702912621359225,\n          5200.0,\n          203.60817448822937\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"TOTMEMBERS\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 360.65881757622145,\n        \"min\": 0.0,\n        \"max\": 1030.0,\n        \"num_unique_values\": 8,\n        \"samples\": [\n          8.233980582524271,\n          6.0,\n          1030.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"SMTMEMBERS\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 361.8975822044236,\n        \"min\": 0.0,\n        \"max\": 1030.0,\n        \"num_unique_values\": 7,\n        \"samples\": [\n          1030.0,\n          3.8970873786407765,\n          6.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"MDEATHS\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 363.89476889151877,\n        \"min\": 0.0,\n        \"max\": 1030.0,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          0.04174757281553398,\n          5.0,\n          0.29111369939533516\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"TOTHIRED\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 360.0936047953161,\n        \"min\": 0.0,\n        \"max\": 1030.0,\n        \"num_unique_values\": 8,\n        \"samples\": [\n          7.415533980582524,\n          5.0,\n          1030.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"SMTHIRED\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 361.3695187180451,\n        \"min\": 0.0,\n        \"max\": 1030.0,\n        \"num_unique_values\": 7,\n        \"samples\": [\n          1030.0,\n          4.021359223300971,\n          6.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"HDEATHS\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 364.00109533043417,\n        \"min\": 0.0,\n        \"max\": 1030.0,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          0.017475728155339806,\n          3.0,\n          0.15799225262157368\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"CHKSUM\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 1146146.583820683,\n        \"min\": 1030.0,\n        \"max\": 2466848.0,\n        \"num_unique_values\": 8,\n        \"samples\": [\n          2209021.83592233,\n          2464497.0,\n          1030.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 31
         }
       ]
     },
