--- a/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN1YSmcmN71BMrtjdHZ60Wx",
+      "authorship_tag": "ABX9TyMcg3m6mueOJAx9pLAYT8hl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4147,14 +4147,54 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "# 4. Which climbing routes (ROUTE1, ROUTE2, ROUTE3, ROUTE4) have the highest success rates (SUCCESS1, SUCCESS2, SUCCESS3, SUCCESS4) across all expeditions?\n",
-        "# 5. How does the use of supplemental oxygen (O2USED, O2NONE) affect summit success rates?\n",
-        "# 6. How often does bad weather (TERMREASON = 4) cause termination compared to technical difficulty (TERMREASON = 10)?\n",
-        "# 7. Are expeditions with no hired personnel (NOHIRED) associated with higher or lower death rates?\n",
-        "# 8. How many people summited each peak?"
+        "# 4. Which climbing routes (ROUTE1, ROUTE2, ROUTE3, ROUTE4) have the highest success rates (SUCCESS1, SUCCESS2, SUCCESS3, SUCCESS4) across all expeditions?"
       ],
       "metadata": {
         "id": "97_nGqcIAAED"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 5. How does the use of supplemental oxygen (O2USED, O2NONE) affect summit success rates?"
+      ],
+      "metadata": {
+        "id": "-rJFBmeN1Lpl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 6. How often does bad weather (TERMREASON = 4) cause termination compared to technical difficulty (TERMREASON = 10)?\n"
+      ],
+      "metadata": {
+        "id": "ZGU2cK4s1OE4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 7. Are expeditions with no hired personnel (NOHIRED) associated with higher or lower death rates?"
+      ],
+      "metadata": {
+        "id": "2-IAYltc1P6f"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 8. How many people summited each peak?"
+      ],
+      "metadata": {
+        "id": "3323nhIj1PNJ"
       },
       "execution_count": null,
       "outputs": []
