--- a/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM0y/2U5sGDQzx4k7xXz9RK",
+      "authorship_tag": "ABX9TyPtOKrxvkA0DD6w8oLeFu9e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4135,7 +4135,10 @@
         "    fill_value=0\n",
         ")\n",
         "\n",
-        "height_distribution"
+        "height_distribution\n",
+        "\n",
+        "# Most peaks are open, with the majority concentrated in the 6000–6999m range;\n",
+        "# higher peaks are rarer, making data above 7000m sparse for analysis."
       ],
       "metadata": {
         "id": "LEKs5YI0JqQL",
