--- a/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPtOKrxvkA0DD6w8oLeFu9e",
+      "authorship_tag": "ABX9TyMWgS7MdH0uigbkB0e/NZQ+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4135,7 +4135,11 @@
         "    fill_value=0\n",
         ")\n",
         "\n",
-        "height_distribution\n",
+        "total_row = pd.DataFrame(height_distribution.sum()).T\n",
+        "total_row.index = ['Total']\n",
+        "height_distribution_with_total = pd.concat([height_distribution, total_row])\n",
+        "\n",
+        "height_distribution_with_total\n",
         "\n",
         "# Most peaks are open, with the majority concentrated in the 6000–6999m range;\n",
         "# higher peaks are rarer, making data above 7000m sparse for analysis."
@@ -4146,15 +4150,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 262
         },
-        "outputId": "70300633-99a7-44a6-b769-9f8f92991da7"
+        "outputId": "2145ee92-0f8e-43d0-8dc6-66706a602981"
       },
-      "execution_count": 32,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/tmp/ipython-input-1548866812.py:9: FutureWarning: The default value of observed=False is deprecated and will change to observed=True in a future version of pandas. Specify observed=False to silence this warning and retain the current behavior\n",
+            "/tmp/ipython-input-4250399256.py:9: FutureWarning: The default value of observed=False is deprecated and will change to observed=True in a future version of pandas. Specify observed=False to silence this warning and retain the current behavior\n",
             "  height_distribution = pd.pivot_table(\n"
           ]
         },
@@ -4162,16 +4166,16 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "OPEN        False  True \n",
-              "HEIGHT_BIN              \n",
-              "6000-6499      55    141\n",
-              "6500-6999      19    144\n",
-              "7000-7499       7     53\n",
-              "7500-7999       2     25"
+              "OPEN       False  True \n",
+              "6000-6499     55    141\n",
+              "6500-6999     19    144\n",
+              "7000-7499      7     53\n",
+              "7500-7999      2     25\n",
+              "Total         83    363"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ee85a614-3bf6-4e79-9998-a7cfbbcc4c53\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-63054bd1-f323-416a-a308-63692df2277a\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -4192,11 +4196,6 @@
               "      <th>OPEN</th>\n",
               "      <th>False</th>\n",
               "      <th>True</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>HEIGHT_BIN</th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -4220,13 +4219,18 @@
               "      <td>2</td>\n",
               "      <td>25</td>\n",
               "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Total</th>\n",
+              "      <td>83</td>\n",
+              "      <td>363</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ee85a614-3bf6-4e79-9998-a7cfbbcc4c53')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-63054bd1-f323-416a-a308-63692df2277a')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -4278,12 +4282,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-ee85a614-3bf6-4e79-9998-a7cfbbcc4c53 button.colab-df-convert');\n",
+              "        document.querySelector('#df-63054bd1-f323-416a-a308-63692df2277a button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-ee85a614-3bf6-4e79-9998-a7cfbbcc4c53');\n",
+              "        const element = document.querySelector('#df-63054bd1-f323-416a-a308-63692df2277a');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -4303,8 +4307,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-b57d0d46-043b-4f15-b4b7-e08c14e05d50\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b57d0d46-043b-4f15-b4b7-e08c14e05d50')\"\n",
+              "    <div id=\"df-60295b8c-aef3-4928-97df-9c174e5063f4\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-60295b8c-aef3-4928-97df-9c174e5063f4')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -4423,14 +4427,14 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-b57d0d46-043b-4f15-b4b7-e08c14e05d50 button');\n",
+              "            document.querySelector('#df-60295b8c-aef3-4928-97df-9c174e5063f4 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
               "      </script>\n",
               "    </div>\n",
               "\n",
-              "  <div id=\"id_6477707f-3f46-41a5-adc2-41b35627f019\">\n",
+              "  <div id=\"id_7d2042aa-81ab-4b7a-9612-668942fbe5f9\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -4462,7 +4466,7 @@
               "        fill: #FFFFFF;\n",
               "      }\n",
               "    </style>\n",
-              "    <button class=\"colab-df-generate\" onclick=\"generateWithVariable('height_distribution')\"\n",
+              "    <button class=\"colab-df-generate\" onclick=\"generateWithVariable('height_distribution_with_total')\"\n",
               "            title=\"Generate code using this dataframe.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -4474,12 +4478,12 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_6477707f-3f46-41a5-adc2-41b35627f019 button.colab-df-generate');\n",
+              "        document.querySelector('#id_7d2042aa-81ab-4b7a-9612-668942fbe5f9 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      buttonEl.onclick = () => {\n",
-              "        google.colab.notebook.generateWithVariable('height_distribution');\n",
+              "        google.colab.notebook.generateWithVariable('height_distribution_with_total');\n",
               "      }\n",
               "      })();\n",
               "    </script>\n",
@@ -4490,12 +4494,12 @@
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
-              "variable_name": "height_distribution",
-              "summary": "{\n  \"name\": \"height_distribution\",\n  \"rows\": 4,\n  \"fields\": [\n    {\n      \"column\": \"HEIGHT_BIN\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 4,\n        \"samples\": [\n          \"6500-6999\",\n          \"7500-7999\",\n          \"6000-6499\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": false,\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 23,\n        \"min\": 2,\n        \"max\": 55,\n        \"num_unique_values\": 4,\n        \"samples\": [\n          19,\n          2,\n          55\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": true,\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 60,\n        \"min\": 25,\n        \"max\": 144,\n        \"num_unique_values\": 4,\n        \"samples\": [\n          144,\n          25,\n          141\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "variable_name": "height_distribution_with_total",
+              "summary": "{\n  \"name\": \"height_distribution_with_total\",\n  \"rows\": 5,\n  \"fields\": [\n    {\n      \"column\": false,\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 34,\n        \"min\": 2,\n        \"max\": 83,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          19,\n          83,\n          7\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": true,\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 132,\n        \"min\": 25,\n        \"max\": 363,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          144,\n          363,\n          53\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 37
         }
       ]
     },
