--- a/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMWgS7MdH0uigbkB0e/NZQ+",
+      "authorship_tag": "ABX9TyPLkO6FjXTwAMIxNE9atW95",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -95,7 +95,7 @@
         "id": "p1WowiWYI8kN",
         "outputId": "d3dc1c05-30ce-4d0a-d666-f1c4c321663b"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +137,7 @@
         "id": "VG8LTA3RFsJG",
         "outputId": "3afd1ec4-17a2-4813-8cce-d0af7d3252fc"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -172,7 +172,7 @@
         "id": "JorscaYGF593",
         "outputId": "c8e42956-22ef-43bb-d510-c7a3d211d641"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -202,7 +202,7 @@
       "metadata": {
         "id": "ug5ZD-5nKv1m"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -237,7 +237,7 @@
       "metadata": {
         "id": "TwWXwWquGCzH"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -259,7 +259,7 @@
       "metadata": {
         "id": "FjDmpIWjGGfk"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -280,7 +280,7 @@
       "metadata": {
         "id": "VukOPgVwGHlI"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -297,7 +297,7 @@
       "metadata": {
         "id": "i22D2btqGQxw"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -316,7 +316,7 @@
       "metadata": {
         "id": "gRoCyBcvGVda"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -334,7 +334,7 @@
       "metadata": {
         "id": "4XmbZmIaGWBj"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -363,7 +363,7 @@
       "metadata": {
         "id": "ayg7WJoMGdbZ"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -375,7 +375,7 @@
       "metadata": {
         "id": "9NScFBvGGrJv"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -417,7 +417,7 @@
         "id": "A71QTknEIRXD",
         "outputId": "6c95f286-203a-4e6a-e52e-a2b815b71332"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -869,7 +869,7 @@
         "id": "y43ikpwZXgIr",
         "outputId": "783318a8-081e-424a-81a6-eb7db760314b"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1301,7 +1301,7 @@
         "id": "-nWZoqK2gIzF",
         "outputId": "c0db70f1-2f00-413a-e9fd-6a3ea674e3ad"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1818,7 +1818,7 @@
         "id": "C9hfnspogMVy",
         "outputId": "8ce8cdef-b9a8-41d0-a753-f633342207af"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2609,7 +2609,7 @@
         "id": "awRds6edge31",
         "outputId": "16921fc2-d1fc-4944-be18-ca17f0dff8d3"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2633,7 +2633,7 @@
         "id": "zFVjem5QbVdG",
         "outputId": "3046b1d8-32a4-4dde-888e-1a60740a00a0"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2691,7 +2691,7 @@
         "id": "ONh4E_O9bYtC",
         "outputId": "0ba7aeb7-f90d-4874-d30a-91b64a6f045d"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2805,7 +2805,7 @@
         "id": "poh7RMfLb2ZO",
         "outputId": "f5a1941b-8cf7-475c-b018-4ba8ad3220da"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2855,7 +2855,7 @@
         "id": "R0H_S1bNiFhm",
         "outputId": "454d9932-6a95-485a-800e-9e7bba21d847"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2973,7 +2973,7 @@
         "id": "dcZR7-55jvjM",
         "outputId": "ad551657-d9a5-43dc-e50d-38dbb80edc0d"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3027,7 +3027,7 @@
         "id": "DaV4rrL1kZG3",
         "outputId": "deef7872-ed9c-4ce4-bc69-8e7abf5dffbd"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3059,7 +3059,7 @@
         "id": "e_6BKBgVbcUt",
         "outputId": "2db115f4-d3ac-4bdd-cb37-65f9a4b3de50"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3444,7 +3444,7 @@
         "id": "VPMoT205bpQy",
         "outputId": "bb1adf4c-ba13-4b1e-afb7-221a777ad180"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4152,7 +4152,7 @@
         },
         "outputId": "2145ee92-0f8e-43d0-8dc6-66706a602981"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4558,6 +4558,18 @@
       ],
       "metadata": {
         "id": "3323nhIj1PNJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 9. Can we predict whether a climber will summit a peak based on year, month, peak, and climber characteristics?\n",
+        "#  (may need to expand to full dataset)"
+      ],
+      "metadata": {
+        "id": "lOjqJIWBHNaz"
       },
       "execution_count": null,
       "outputs": []
