--- a/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPLkO6FjXTwAMIxNE9atW95",
+      "authorship_tag": "ABX9TyO2MwBgLMgqAWyWec7isDFY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4141,8 +4141,9 @@
         "\n",
         "height_distribution_with_total\n",
         "\n",
-        "# Most peaks are open, with the majority concentrated in the 6000–6999m range;\n",
-        "# higher peaks are rarer, making data above 7000m sparse for analysis."
+        "# Most peaks are open, with the majority between 6000–6999m.\n",
+        "# Peaks above 7000m are more likely to be closed, likely due to greater risks,\n",
+        "# resulting in sparser data for higher elevations."
       ],
       "metadata": {
         "id": "LEKs5YI0JqQL",
