Update notebook and project files

--- a/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions.ipynb
@@ -6702,7 +6702,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": null,
       "metadata": {
         "id": "97_nGqcIAAED"
       },
@@ -6720,7 +6720,7 @@
         "# 4. Which climbing routes (ROUTE1, ROUTE2, ROUTE3, ROUTE4) have the highest\n",
         "# success rates (SUCCESS1, SUCCESS2, SUCCESS3, SUCCESS4) across all expeditions?\n",
         "\n",
-        "# My original solution \n",
+        "# My original solution - I have a preference for using base Python at this stage of my journey\n",
         "\n",
         "# List of route column names\n",
         "route_col = ['ROUTE1', 'ROUTE2', 'ROUTE3', 'ROUTE4']\n",
@@ -6748,7 +6748,7 @@
         "# Print the dictionary with counts of successful climbs per route\n",
         "print(successful_counts)\n",
         "\n",
-        "# Pythonic way\n",
+        "# Pythonic way - for reference\n",
         "\n",
         "route_cols = ['ROUTE1', 'ROUTE2', 'ROUTE3', 'ROUTE4']\n",
         "success_cols = ['SUCCESS1', 'SUCCESS2', 'SUCCESS3', 'SUCCESS4']\n",
