Update notebook and project files

--- a/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
@@ -6799,7 +6799,8 @@
       "source": [
         "# 5. How does the use of supplemental oxygen (O2USED, O2NONE) affect summit\n",
         "# success rates?\n",
-        "\n"
+        "\n",
+        "exped_tidy.head()\n"
       ]
     },
     {
