Update notebook and project files

--- a/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
@@ -7721,10 +7721,28 @@
         "# 5. How does the use of supplemental oxygen (O2USED, O2NONE) affect summit\n",
         "# success rates?\n",
         "\n",
-        "#Count o2used against success in any of the success 1-4 columns. Look at the proportion of hikes that called for any use of oxygen at all.\n",
+        "# PSEUDOCODE\n",
+        "# For each expedition (row):\n",
+        "#   Check if O2 was used (O2USED = True) or not (O2NONE = True)\n",
+        "#   Check if the expedition was successful in any of the success columns (SUCCESS1-SUCCESS4)\n",
+        "\n",
+        "# Count totals:\n",
+        "#   - Number of rows where Success = True in any column AND O2Used = True\n",
+        "#   - Number of rows where Success = True in any column AND O2Used = False\n",
+        "\n",
+        "# Calculate proportion:\n",
+        "#   - Proportion of successful expeditions that used oxygen\n",
+        "#   - Proportion of successful expeditions that did not use oxygen\n",
         "\n",
         "exped_tidy.head()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
