Update notebook and project files

--- a/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
@@ -6791,7 +6791,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": null,
       "metadata": {
         "id": "-rJFBmeN1Lpl"
       },
@@ -6800,14 +6800,18 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Successful expeditions using oxygen: 426\n",
-            "Successful expeditions without oxygen: 343\n"
+            "Successful expeditions using oxygen: 426 (57.49%)\n",
+            "Successful expeditions without oxygen: 343 (46.29%)\n"
           ]
         }
       ],
       "source": [
         "# 5. How does the use of supplemental oxygen (O2USED, O2NONE) affect summit\n",
         "# success rates?\n",
+        "\n",
+        "# Restate the question: Compare summit success rates between expeditions that used \n",
+        "# supplemental oxygen and those that did not. Determine whether oxygen use \n",
+        "# is associated with higher or lower summit success.\n",
         "\n",
         "# PSEUDOCODE\n",
         "# For each expedition (row):\n",
@@ -6837,8 +6841,43 @@
         "    successful_with_oxygen += success_this_route_with_oxy.sum()\n",
         "    successful_without_oxygen += success_this_route_without_oxy.sum()\n",
         "\n",
-        "print(\"Successful expeditions using oxygen:\", successful_with_oxygen)\n",
-        "print(\"Successful expeditions without oxygen:\", successful_without_oxygen)"
+        "# Total successful expeditions across any SUCCESS column\n",
+        "total_successful = exped_tidy[['SUCCESS1','SUCCESS2','SUCCESS3','SUCCESS4']].any(axis=1).sum()\n",
+        "\n",
+        "# Percentages relative to total successful expeditions\n",
+        "percentage_with_oxygen = (successful_with_oxygen / total_successful) * 100\n",
+        "percentage_without_oxygen = (successful_without_oxygen / total_successful) * 100\n",
+        "\n",
+        "# Print with f-strings for clarity\n",
+        "print(f\"Successful expeditions using oxygen: {successful_with_oxygen} ({percentage_with_oxygen:.2f}%)\")\n",
+        "print(f\"Successful expeditions without oxygen: {successful_without_oxygen} ({percentage_without_oxygen:.2f}%)\")\n",
+        "\n",
+        "# Climbers who used supplementary oxygen had a higher success rate.\n",
+        "# Roughly 57.5% of successes involved oxygen use.\n",
+        "# Only 46.3% of successes happened without oxygen."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# 5. How does the use of supplemental oxygen (O2USED, O2NONE) affect summit\n",
+        "# success rates?\n",
+        "\n",
+        "# PSEUDOCODE\n",
+        "# For each expedition (row):\n",
+        "#   Check if O2 was used (O2USED = True) or not (O2NONE = True)\n",
+        "#   Check if the expedition was successful in any of the success columns (SUCCESS1-SUCCESS4)\n",
+        "\n",
+        "# Count totals:\n",
+        "#   - Number of rows where Success = True in any column AND O2Used = True\n",
+        "#   - Number of rows where Success = True in any column AND O2Used = False\n",
+        "\n",
+        "# Calculate proportion:\n",
+        "#   - Proportion of successful expeditions that used oxygen\n",
+        "#   - Proportion of successful expeditions that did not use oxygen"
       ]
     },
     {
@@ -6886,15 +6925,6 @@
       "source": [
         "# 9. Can we predict whether a climber will summit a peak based on year, month, peak, and climber characteristics?\n",
         "#  (may need to expand to full dataset)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 47,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "###"
       ]
     },
     {
