Update notebook and project files

--- a/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
@@ -6791,7 +6791,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {
         "id": "-rJFBmeN1Lpl"
       },
@@ -6853,9 +6853,10 @@
         "print(f\"Successful expeditions using oxygen: {successful_with_oxygen} ({percentage_with_oxygen:.1f}%)\")\n",
         "print(f\"Successful expeditions without oxygen: {successful_without_oxygen} ({percentage_without_oxygen:.1f}%)\")\n",
         "\n",
-        "# Climbers who used supplementary oxygen had a higher success rate.\n",
-        "# Roughly 57.5% of successes involved oxygen use.\n",
-        "# Only 46.3% of successes happened without oxygen.\n",
+        "# Among all successful expeditions:\n",
+        "# - 57.5% involved the use of supplementary oxygen\n",
+        "# - 46.3% succeeded without using oxygen\n",
+        "# This shows that most successful expeditions involved oxygen use.\n",
         "\n",
         "all_expeditions_that_used_oxygen = (exped_tidy['O2USED'] == True).sum()\n",
         "all_expeditions_that_did_not_use_oxygen = (exped_tidy['O2NONE'] == True).sum()\n",
@@ -6869,7 +6870,9 @@
         "success_rate_without_oxygen = successful_without_oxygen / all_expeditions_that_did_not_use_oxygen * 100\n",
         "\n",
         "print(f\"Success rate for expeditions that used oxygen: {success_rate_with_oxygen:.1f}%\")\n",
-        "print(f\"Success rate for expeditions that did not use oxygen: {success_rate_without_oxygen:.1f}%\")"
+        "print(f\"Success rate for expeditions that did not use oxygen: {success_rate_without_oxygen:.1f}%\")\n",
+        "\n",
+        "# Climbers who used oxygen had a higher success rate (96%) compared to those who did not (60%)."
       ]
     },
     {
