Update notebook and project files

--- a/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
@@ -6791,7 +6791,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 49,
       "metadata": {
         "id": "-rJFBmeN1Lpl"
       },
@@ -6877,37 +6877,262 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# 5. How does the use of supplemental oxygen (O2USED, O2NONE) affect summit\n",
-        "# success rates?\n",
-        "\n",
-        "# PSEUDOCODE\n",
-        "# For each expedition (row):\n",
-        "#   Check if O2 was used (O2USED = True) or not (O2NONE = True)\n",
-        "#   Check if the expedition was successful in any of the success columns (SUCCESS1-SUCCESS4)\n",
-        "\n",
-        "# Count totals:\n",
-        "#   - Number of rows where Success = True in any column AND O2Used = True\n",
-        "#   - Number of rows where Success = True in any column AND O2Used = False\n",
-        "\n",
-        "# Calculate proportion:\n",
-        "#   - Proportion of successful expeditions that used oxygen\n",
-        "#   - Proportion of successful expeditions that did not use oxygen"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "id": "ZGU2cK4s1OE4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+              "columns": [
+                {
+                  "name": "index",
+                  "rawType": "int64",
+                  "type": "integer"
+                },
+                {
+                  "name": "TERMREASON",
+                  "rawType": "bool",
+                  "type": "boolean"
+                }
+              ],
+              "ref": "19faea71-772f-4a3d-b1d2-05339c1edd80",
+              "rows": [
+                [
+                  "10416",
+                  "False"
+                ],
+                [
+                  "10417",
+                  "False"
+                ],
+                [
+                  "10418",
+                  "False"
+                ],
+                [
+                  "10515",
+                  "False"
+                ],
+                [
+                  "10516",
+                  "False"
+                ],
+                [
+                  "10517",
+                  "False"
+                ],
+                [
+                  "10518",
+                  "True"
+                ],
+                [
+                  "10519",
+                  "False"
+                ],
+                [
+                  "10520",
+                  "False"
+                ],
+                [
+                  "10521",
+                  "False"
+                ],
+                [
+                  "10522",
+                  "False"
+                ],
+                [
+                  "10524",
+                  "False"
+                ],
+                [
+                  "10526",
+                  "False"
+                ],
+                [
+                  "10528",
+                  "False"
+                ],
+                [
+                  "10530",
+                  "True"
+                ],
+                [
+                  "10531",
+                  "False"
+                ],
+                [
+                  "10533",
+                  "False"
+                ],
+                [
+                  "10535",
+                  "False"
+                ],
+                [
+                  "10536",
+                  "False"
+                ],
+                [
+                  "10537",
+                  "False"
+                ],
+                [
+                  "10538",
+                  "False"
+                ],
+                [
+                  "10540",
+                  "False"
+                ],
+                [
+                  "10541",
+                  "False"
+                ],
+                [
+                  "10542",
+                  "False"
+                ],
+                [
+                  "10543",
+                  "False"
+                ],
+                [
+                  "10544",
+                  "False"
+                ],
+                [
+                  "10545",
+                  "False"
+                ],
+                [
+                  "10546",
+                  "False"
+                ],
+                [
+                  "10547",
+                  "False"
+                ],
+                [
+                  "10548",
+                  "False"
+                ],
+                [
+                  "10549",
+                  "False"
+                ],
+                [
+                  "10550",
+                  "False"
+                ],
+                [
+                  "10551",
+                  "False"
+                ],
+                [
+                  "10552",
+                  "False"
+                ],
+                [
+                  "10553",
+                  "False"
+                ],
+                [
+                  "10554",
+                  "False"
+                ],
+                [
+                  "10556",
+                  "False"
+                ],
+                [
+                  "10557",
+                  "False"
+                ],
+                [
+                  "10558",
+                  "False"
+                ],
+                [
+                  "10559",
+                  "False"
+                ],
+                [
+                  "10560",
+                  "False"
+                ],
+                [
+                  "10561",
+                  "False"
+                ],
+                [
+                  "10562",
+                  "False"
+                ],
+                [
+                  "10563",
+                  "False"
+                ],
+                [
+                  "10564",
+                  "False"
+                ],
+                [
+                  "10565",
+                  "False"
+                ],
+                [
+                  "10566",
+                  "False"
+                ],
+                [
+                  "10567",
+                  "False"
+                ],
+                [
+                  "10568",
+                  "False"
+                ],
+                [
+                  "10569",
+                  "False"
+                ]
+              ],
+              "shape": {
+                "columns": 1,
+                "rows": 1030
+              }
+            },
+            "text/plain": [
+              "10416    False\n",
+              "10417    False\n",
+              "10418    False\n",
+              "10515    False\n",
+              "10516    False\n",
+              "         ...  \n",
+              "11570    False\n",
+              "11571    False\n",
+              "11575    False\n",
+              "11576    False\n",
+              "11577    False\n",
+              "Name: TERMREASON, Length: 1030, dtype: bool"
+            ]
+          },
+          "execution_count": 53,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# 6. How often does bad weather (TERMREASON = 4) cause termination compared to\n",
-        "# technical difficulty (TERMREASON = 10)?"
+        "# technical difficulty (TERMREASON = 10)?\n",
+        "\n",
+        "exped_tidy.head()\n",
+        "\n",
+        "exped_tidy['TERMREASON']==4\n",
+        "exped_tidy['TERMREASON']==10"
       ]
     },
     {
