--- a/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
@@ -6887,240 +6887,100 @@
             "application/vnd.microsoft.datawrangler.viewer.v0+json": {
               "columns": [
                 {
-                  "name": "index",
+                  "name": "TERMREASON",
                   "rawType": "int64",
                   "type": "integer"
                 },
                 {
-                  "name": "TERMREASON",
-                  "rawType": "bool",
-                  "type": "boolean"
+                  "name": "count",
+                  "rawType": "int64",
+                  "type": "integer"
                 }
               ],
-              "ref": "19faea71-772f-4a3d-b1d2-05339c1edd80",
+              "ref": "caa8c52a-8b88-4e52-9685-d53a9c4f5b87",
               "rows": [
                 [
-                  "10416",
-                  "False"
+                  "1",
+                  "738"
                 ],
                 [
-                  "10417",
-                  "False"
+                  "4",
+                  "90"
                 ],
                 [
-                  "10418",
-                  "False"
+                  "5",
+                  "59"
                 ],
                 [
-                  "10515",
-                  "False"
+                  "7",
+                  "29"
                 ],
                 [
-                  "10516",
-                  "False"
+                  "0",
+                  "29"
                 ],
                 [
-                  "10517",
-                  "False"
+                  "2",
+                  "26"
                 ],
                 [
-                  "10518",
-                  "True"
+                  "12",
+                  "16"
                 ],
                 [
-                  "10519",
-                  "False"
+                  "14",
+                  "13"
                 ],
                 [
-                  "10520",
-                  "False"
+                  "10",
+                  "11"
                 ],
                 [
-                  "10521",
-                  "False"
+                  "6",
+                  "6"
                 ],
                 [
-                  "10522",
-                  "False"
+                  "9",
+                  "5"
                 ],
                 [
-                  "10524",
-                  "False"
+                  "8",
+                  "5"
                 ],
                 [
-                  "10526",
-                  "False"
+                  "11",
+                  "2"
                 ],
                 [
-                  "10528",
-                  "False"
-                ],
-                [
-                  "10530",
-                  "True"
-                ],
-                [
-                  "10531",
-                  "False"
-                ],
-                [
-                  "10533",
-                  "False"
-                ],
-                [
-                  "10535",
-                  "False"
-                ],
-                [
-                  "10536",
-                  "False"
-                ],
-                [
-                  "10537",
-                  "False"
-                ],
-                [
-                  "10538",
-                  "False"
-                ],
-                [
-                  "10540",
-                  "False"
-                ],
-                [
-                  "10541",
-                  "False"
-                ],
-                [
-                  "10542",
-                  "False"
-                ],
-                [
-                  "10543",
-                  "False"
-                ],
-                [
-                  "10544",
-                  "False"
-                ],
-                [
-                  "10545",
-                  "False"
-                ],
-                [
-                  "10546",
-                  "False"
-                ],
-                [
-                  "10547",
-                  "False"
-                ],
-                [
-                  "10548",
-                  "False"
-                ],
-                [
-                  "10549",
-                  "False"
-                ],
-                [
-                  "10550",
-                  "False"
-                ],
-                [
-                  "10551",
-                  "False"
-                ],
-                [
-                  "10552",
-                  "False"
-                ],
-                [
-                  "10553",
-                  "False"
-                ],
-                [
-                  "10554",
-                  "False"
-                ],
-                [
-                  "10556",
-                  "False"
-                ],
-                [
-                  "10557",
-                  "False"
-                ],
-                [
-                  "10558",
-                  "False"
-                ],
-                [
-                  "10559",
-                  "False"
-                ],
-                [
-                  "10560",
-                  "False"
-                ],
-                [
-                  "10561",
-                  "False"
-                ],
-                [
-                  "10562",
-                  "False"
-                ],
-                [
-                  "10563",
-                  "False"
-                ],
-                [
-                  "10564",
-                  "False"
-                ],
-                [
-                  "10565",
-                  "False"
-                ],
-                [
-                  "10566",
-                  "False"
-                ],
-                [
-                  "10567",
-                  "False"
-                ],
-                [
-                  "10568",
-                  "False"
-                ],
-                [
-                  "10569",
-                  "False"
+                  "3",
+                  "1"
                 ]
               ],
               "shape": {
                 "columns": 1,
-                "rows": 1030
+                "rows": 14
               }
             },
             "text/plain": [
-              "10416    False\n",
-              "10417    False\n",
-              "10418    False\n",
-              "10515    False\n",
-              "10516    False\n",
-              "         ...  \n",
-              "11570    False\n",
-              "11571    False\n",
-              "11575    False\n",
-              "11576    False\n",
-              "11577    False\n",
-              "Name: TERMREASON, Length: 1030, dtype: bool"
+              "TERMREASON\n",
+              "1     738\n",
+              "4      90\n",
+              "5      59\n",
+              "7      29\n",
+              "0      29\n",
+              "2      26\n",
+              "12     16\n",
+              "14     13\n",
+              "10     11\n",
+              "6       6\n",
+              "9       5\n",
+              "8       5\n",
+              "11      2\n",
+              "3       1\n",
+              "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 53,
+          "execution_count": 54,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -7129,10 +6989,18 @@
         "# 6. How often does bad weather (TERMREASON = 4) cause termination compared to\n",
         "# technical difficulty (TERMREASON = 10)?\n",
         "\n",
-        "exped_tidy.head()\n",
+        "exped_tidy['TERMREASON'].value_counts()\n",
         "\n",
-        "exped_tidy['TERMREASON']==4\n",
-        "exped_tidy['TERMREASON']==10"
+        "bad_weather_count = (exped_tidy['TERMREASON'] == 4).sum()\n",
+        "technical_diff_count = (exped_tidy['TERMREASON'] == 10).sum()\n",
+        "\n",
+        "print(f\"Bad weather terminations: {bad_weather_count}\")\n",
+        "print(f\"Technical difficulty terminations: {technical_diff_count}\")\n",
+        "\n",
+        "total_terminations = len(exped_tidy)\n",
+        "\n",
+        "print(f\"Bad weather termination rate: {bad_weather_count/total_terminations:.2f}\")\n",
+        "print()"
       ]
     },
     {
