Update notebook and project files

--- a/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
@@ -6989,7 +6989,7 @@
         "# 6. How often does bad weather (TERMREASON = 4) cause termination compared to\n",
         "# technical difficulty (TERMREASON = 10)?\n",
         "\n",
-        "exped_tidy['TERMREASON'].value_counts()\n",
+        "# exped_tidy['TERMREASON'].value_counts()\n",
         "\n",
         "bad_weather_count = (exped_tidy['TERMREASON'] == 4).sum()\n",
         "technical_diff_count = (exped_tidy['TERMREASON'] == 10).sum()\n",
@@ -7000,7 +7000,7 @@
         "total_terminations = len(exped_tidy)\n",
         "\n",
         "print(f\"Bad weather termination rate: {bad_weather_count/total_terminations:.2f}\")\n",
-        "print()"
+        "print(f\"Technical difficulty termination rate: {technical_diff_count/total_terminations:.2f}\")"
       ]
     },
     {
