Update notebook and project files

--- a/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
+++ b/2025_01_21_himalayan_expeditions/2025_01_21_himalayan_expeditions.ipynb
@@ -7000,19 +7000,23 @@
         "total_terminations = len(exped_tidy)\n",
         "\n",
         "print(f\"Bad weather termination rate: {bad_weather_count/total_terminations:.2f}\")\n",
-        "print(f\"Technical difficulty termination rate: {technical_diff_count/total_terminations:.2f}\")"
+        "print(f\"Technical difficulty termination rate: {technical_diff_count/total_terminations:.2f}\")\n",
+        "\n",
+        "# The fact that weather caused terminations more often than technical difficulty suggests \n",
+        "# that even well-prepared Himalayan climbers are highly vulnerable to environmental conditions."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "id": "2-IAYltc1P6f"
       },
       "outputs": [],
       "source": [
         "# 7. Are expeditions with no hired personnel (NOHIRED) associated with higher or\n",
-        "# lower death rates? %% 8. How many people summited each peak?"
+        "# lower death rates? %% 8. How many people summited each peak?\n",
+        "\n"
       ]
     },
     {
